fixed: logo did not fit on mobile

--- a/template/style.css
+++ b/template/style.css
@@ -22,7 +22,7 @@ header {
 		margin: 2em 0;
 		text-align: center;
 	}
-		header #logo > img {
+		header #logo img {
 			max-width: 100%;
 		}
 	header nav {
